--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -6,8 +6,7 @@
 
 .myPro {
     border-radius: 25px;
-    background: rgba(255, 255, 255, 0.1);
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
+    background: var(--pro_bg);
     box-sizing: border-box;
     border: 5px solid transparent;
     background-clip: padding-box;
@@ -83,13 +82,17 @@
     margin: 50px auto;
 }
 
+.iMac h4{
+    padding-top: 2vh;
+}
+
 .iMac .body {
     height: 230px;
     background: #ddd;
     border-radius: 5px;
     overflow: hidden;
     position: relative;
-    box-shadow: inset 0px -2px 0px #909090;
+
 }
 
 .iMac .body .shine {
