--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btnToTop{
+  position: fixed;
+  right: 5%;
+  bottom: 10%;
+  z-index: 200;
+  border-radius: 50%;
+  background:#FF4500;
+  cursor: grab;
+}
