--- a/src/CSS/edu.css
+++ b/src/CSS/edu.css
@@ -6,6 +6,14 @@
   padding-top: 4%;
 }
 
+.expSection {
+  background: var(--body_edubg);
+  min-height: 10vh;
+  color: var(--edu_color);
+  text-align: left;
+  padding-top: 4%;
+}
+
 .sclLogo {
   max-width: 15%;
   border-radius: 40%;
